--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -1,5 +1,6 @@
 [deps]
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
+WeakKeyIdDicts = "ecbed89c-9d59-4137-ae1f-d1084086d01c"
 
 [compat]
 Documenter = "1"
