fix format check style

--- a/.github/workflows/FormatCheck.yml
+++ b/.github/workflows/FormatCheck.yml
@@ -40,7 +40,7 @@ jobs:
         shell: julia --project=@format --color=yes {0}
         run: |
           using JuliaFormatter
-          format("."; verbose=true, style="yas") || exit(1)
+          format("."; verbose=true, style=YASStyle()) || exit(1)
       # Add formatting suggestions to non-draft PRs even if when "Check formatting" fails
       - uses: reviewdog/action-suggester@v1
         if: ${{ !cancelled() && github.event_name == 'pull_request' && github.event.pull_request.draft == false }}
