--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -76,11 +76,16 @@ jobs:
         with:
           version: ${{ steps.version_resolver.outputs.version }}
           arch: ${{ matrix.arch }}
-      - uses: julia-actions/cache@v1
+      - uses: actions/cache@v2
+        with:
+            path: ~/.julia/artifacts
+            key: ${{ runner.os }}-test-artifacts-${{ hashFiles('**/Project.toml') }}
+            restore-keys: ${{ runner.os }}-test-artifacts
       - uses: julia-actions/add-julia-registry@v2
         with:
           key: ${{ secrets.BEACONBUDDY_SSH_KEY }}
           registry: beacon-biosignals/BeaconRegistry
+      - uses: julia-actions/julia-buildpkg@v1
       - uses: julia-actions/julia-runtest@v1
         with:
           annotate: true
